--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "name": "Waivio Product Extension",
+  "version": "1.0.0",
+  "manifest_version": 3,
   "compilerOptions": {
     "target": "es5",
     "lib": [
