--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@
 /coverage
 
 # production
-/build
+/dist
+
+#Ignore idea
+.idea
+.idea/*
 
 # misc
 .DS_Store
@@ -21,3 +25,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
