--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack",
     "build:watch": "webpack --watch",
+    "lint": "eslint --ext=.jsx,.js,.tsx,.ts  .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,7 +47,9 @@
   "devDependencies": {
     "@types/chrome": "0.0.234",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.39.0",
     "ts-loader": "^9.4.2",
+    "typescript-eslint": "0.0.1-alpha.0",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2"
   }
