refactor content script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "sourceType": "module"
   },
   "rules": {
+    "no-plusplus": 0,
+    "import/prefer-default-export": 0,
     "import/extensions": [
       "error",
       "ignorePackages",
