--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,11 @@
   "rules": {
     "no-plusplus": 0,
     "import/prefer-default-export": 0,
+    "no-await-in-loop": 0,
+    "no-restricted-syntax": 0,
+    "consistent-return": 0,
+    "no-console": 0,
+    "no-continue": 0,
     "import/extensions": [
       "error",
       "ignorePackages",
