--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,5 +12,8 @@
       "matches": ["<all_urls>"],
       "js": ["contentScript.js"]
     }
-  ]
+  ],
+  "icons" : {
+    "128" : "icon128.png"
+  }
 }
