--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
