--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@types/styled-components": "^5.1.26",
+    "archiver": "^5.3.1",
+    "aws-sdk": "^2.1386.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,8 @@
     "build": "webpack",
     "build:watch": "webpack --watch",
     "lint": "eslint --fix --ext=.jsx,.js,.tsx,.ts  .",
+    "dist-to-aws": "node ./deploy/index.js",
+    "deploy": "npm run build && npm run dist-to-aws",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
