--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.26",
     "archiver": "^5.3.1",
     "aws-sdk": "^2.1386.0",
+    "franc-min": "^6.1.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
