--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.6.1",
     "archiver": "^5.3.1",
+    "axios": "^1.6.2",
     "aws-sdk": "^2.1386.0",
     "franc-min": "^6.1.0",
     "joi": "^17.9.2",
+    "node-html-parser": "^6.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
