--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Waivio Chrome Extension",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "manifest_version": 3,
   "action": {
     "default_title": "Parse Waivio Product",
     "default_popup": "./index.html"
   },
-  "permissions": ["activeTab", "tabs", "cookies"],
+  "permissions": ["activeTab", "tabs", "cookies", "storage"],
   "host_permissions": ["<all_urls>"],
   "content_scripts":  [
     {
