--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.1386.0",
     "axios": "^1.6.2",
     "franc-min": "^6.1.0",
+    "html2canvas": "^1.4.1",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
