--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
