--- a/package.json
+++ b/package.json
@@ -3,30 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.25",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "@types/styled-components": "^5.1.26",
-    "antd": "^5.22.1",
-    "archiver": "^5.3.1",
-    "aws-sdk": "^2.1386.0",
-    "axios": "^1.6.2",
-    "franc-min": "^6.1.0",
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.26.0",
+    "archiver": "^7.0.1",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.9.0",
+    "franc-min": "^6.2.0",
     "html2canvas": "^1.4.1",
-    "joi": "^17.9.2",
+    "joi": "^17.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.10",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
+    "styled-components": "^6.1.18",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/chrome": "0.0.326",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/styled-components": "^5.1.34",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "copy-webpack-plugin": "^13.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "react-scripts": "5.0.1",
+    "ts-loader": "^9.5.2",
+    "typescript": "^4.9.5",
+    "typescript-eslint": "8.34.0",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
@@ -56,15 +65,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/chrome": "0.0.234",
-    "copy-webpack-plugin": "^11.0.0",
-    "eslint": "^8.39.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "ts-loader": "^9.4.2",
-    "typescript-eslint": "0.0.1-alpha.0",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2"
   }
 }
