--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/chrome": "0.0.326",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/styled-components": "^5.1.34",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -35,12 +35,15 @@
     "typescript": "^4.9.5",
     "typescript-eslint": "8.34.0",
     "webpack": "^5.99.9",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1"
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack",
     "build:watch": "webpack --watch",
+    "build:stats": "webpack --json > dist/stats.json",
+    "analyze": "npm run build:stats && webpack-bundle-analyzer dist/stats.json",
     "lint": "eslint --fix --ext=.jsx,.js,.tsx,.ts  .",
     "dist-to-aws": "node ./deploy/index.js",
     "deploy": "npm run build && npm run dist-to-aws",
