--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "archiver": "^7.0.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.9.0",
+    "cheerio": "^1.1.2",
     "franc-min": "^6.2.0",
     "html2canvas": "^1.4.1",
     "joi": "^17.13.3",
+    "qs": "^6.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
@@ -27,6 +29,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/styled-components": "^5.1.34",
+    "@types/qs": "^6.14.0",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
