--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "remove-markdown": "^0.6.2",
     "styled-components": "^6.1.18",
     "xlsx": "^0.18.5"
   },
@@ -26,10 +27,10 @@
     "@types/chrome": "0.0.326",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.0.1",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/styled-components": "^5.1.34",
-    "@types/qs": "^6.14.0",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
